fix hero img  width on mobile

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,8 +7,8 @@ html *{
 }
 
 body{
- min-height: 100vh;
- min-width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
 main{
@@ -16,6 +16,7 @@ main{
     display: flex;
     justify-content: center;
     width: 100%;
+    position: relative;
 
     @media screen and (max-width: 768px) {
         flex-direction: column-reverse;
@@ -63,10 +64,6 @@ main{
 
     @media screen and (max-width: 768px) {
         width: 80%;
-    }
-   
-    @media screen and (max-width: 480px) {
-        width: 100%;
     }
 
    h1{
@@ -206,6 +203,9 @@ form{
 }
 
 .hero{
+    align-items: center;
+    display: flex;
+    justify-content: center;
     height: 100vh;
     width: 40%;
     overflow: hidden;
@@ -230,6 +230,7 @@ footer{
     background-color: $soft;
     text-align: center;
     padding: 0.5rem;
+
 
     p{
         color: #000;
